fixing spacing

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -289,10 +289,10 @@ a {
 
 /* # Article Paragraphs */
 
-/*article p:first-of-type {
+article h1 + p:first-of-type {
     padding-top: 10px;
     margin-top: 20px;
-}*/
+}
 
 article strong {
     font-weight: 600;
@@ -855,7 +855,6 @@ a.btn.success {
     height: 39px;
     padding: 5px 30px;
     text-align: center;
-    margin-top: 24px;
 }
 .next-btn {
     margin-top: 30px;
@@ -877,7 +876,6 @@ a.btn:active,
 a.btn:focus {
     outline: none;
     cursor: pointer;
-    margin-top: 24px;
     background-color: #00d9c1;
     cursor: pointer;
     outline: 0;
